com-at/build/log/idf_py_stderr_output_1292689
/home/eunous/git/dvid/com-at/com-at/components/at_ble/at_ble.c: In function 'at_handle_bleadv':
/home/eunous/git/dvid/com-at/com-at/components/at_ble/at_ble.c:159:15: error: 'struct ble_gap_adv_params' has no member named 'own_addr_type'
  159 |     adv_params.own_addr_type = BLE_OWN_ADDR_PUBLIC; // IMPORTANT !
      |               ^
make[2]: *** [esp-idf/at_ble/CMakeFiles/__idf_at_ble.dir/build.make:76: esp-idf/at_ble/CMakeFiles/__idf_at_ble.dir/at_ble.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5745: esp-idf/at_ble/CMakeFiles/__idf_at_ble.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
